# workflow-core

./: .gitignore  README.md  debug_main.py  main.py  pyproject.toml  requirements.txt
core/: config.py  constants.py  logger.py  manager.py  utils.py  workflow.py
data/workflowData/: example_workflow.json  git_switch_update_demo.json  git_switch_update_test.json  test.json  trigger_demo.json  webhook_demo.json
data/workflowData/demo/: demo_git_flow_data.json
data/workflowData/trigger/: demo_trigger_flow_data.json
src/workflow_core/: __init__.py
templates/: iwara_ranking_template.txt
workflows/: bat_flow.py  iwara_download_flow.py  iwara_ranking_post_fetch_flow.py  iwara_video_download_flow.py  main_test_flow.py  param_printer_flow.py  sys_version_check_flow.py  video_copy_flow.py  wallpaper_video_copy_flow.py
workflows/demo/: async_demo_flow.py  demo_async_flow.py  demo_git_switch_update_flow.py  demo_git_workflow_flow.py  demo_nest_flow.py  demo_parameter_flow.py  demo_shared_context_flow.py  demo_simple_example_flow.py  demo_system_workflow_flow.py  demo_trigger_flow.py
workflows/git/: base_git_flow.py  git_branch_flow.py  git_clone_flow.py  git_commit_flow.py  git_fetch_flow.py  git_pull_flow.py  git_push_flow.py  git_reset_flow.py  git_status_flow.py  git_switch_update_flow.py
workflows/system/: bat_flow.py  sys_version_check_flow.py
workflows/test/: test_git_switch_update_flow.py  test_interval_trigger_flow.py  test_workflow_data_flow.py
workflows/trigger/: at_trigger_flow.py  base_trigger_flow.py  interval_trigger_flow.py  webhook_trigger_flow.py
